[@mantine/core] Fieldset: Fix some elements overflowing the viewport width when rendered inside fieldset (#5179)

--- a/src/mantine-core/src/components/Fieldset/Fieldset.module.css
+++ b/src/mantine-core/src/components/Fieldset/Fieldset.module.css
@@ -2,6 +2,7 @@
   padding: var(--mantine-spacing-lg);
   padding-top: var(--mantine-spacing-xs);
   border-radius: var(--fieldset-radius, var(--mantine-radius-default));
+  min-inline-size: auto;
 }
 
 .root--default {
